fixing overflow

--- a/styles.scss
+++ b/styles.scss
@@ -4,7 +4,7 @@ $orange: #e35925;
 body {
   margin: 0;
   font-family: 'Open Sans', sans-serif;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .main{
